# nav2_rosdevday_2021

./: README.md  deps.repos
nav2_rosdevday_2021/: CMakeLists.txt  package.xml
nav2_rosdevday_2021/launch/: system_launch.py
nav2_rosdevday_2021/params/: basic_params.yaml
